<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="24dp"
        android:paddingHorizontal="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            android:autofillHints="" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:onClick="onSubmitClicked"
            android:text="@string/save_and_show_report" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>