<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="24dp"
        android:paddingHorizontal="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstNameAns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_first_name" />

        <TextView
            android:id="@+id/lastNameAns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_last_name" />

        <TextView
            android:id="@+id/ageAns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_age" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>